[package]
name = "iay"
description = "iay! Shell prompt"
version = "0.1.1"
authors = ["Aaqa Ishtyaq <aaqaishtyaq@gmail.com>"]
homepage = "https://github.com/aaqaishtyaq/iay"
edition = "2018"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.11.0"
clap = "2.33.3"
git2 = "0.13.22"
libc = "0.2.101"
tico = "2.0.0"
lazy_static = "1.4.0"
