[package]
name = "iay"
version = "0.1.7"
authors = ["Aaqa Ishtyaq <aaqaishtyaq@gmail.com>"]
homepage = "https://github.com/aaqaishtyaq/iay"
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = ["prompt", "shell", "bash", "zsh"]
categories = ["command-line-utilities"]
description = """
iay! The minimalistic, blazing-fast, and extendable prompt for bash and zsh.
"""
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.11.0"
clap = "2.33.3"
git2 = { version = "0.13.25", default-features = false }
libc = "0.2.101"
tico = "2.0.0"
lazy_static = "1.4.0"
