[package]
name = "iay"
version = "0.2.0"
authors = ["Aaqa Ishtyaq <aaqaishtyaq@gmail.com>"]
homepage = "https://github.com/aaqaishtyaq/iay"
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = ["prompt", "shell", "bash", "zsh"]
categories = ["command-line-utilities"]
description = """
iay! The minimalistic, blazing-fast, and extendable prompt for bash and zsh.
"""
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "3.2.4", features = ["derive"] }
git2 = { version = "0.14.2", default-features = false }
libc = "0.2.125"
tico = "2.0.0"
lazy_static = "1.4.0"
